# TradeBotManager

./: .gitignore
.environment_pr/: docker-compose.yml  dockerfile  pyproject.toml
curator/: curator_15m.py
infra/bybit/: auth.py  fetch_kline.py  order.py  trader.py
infra/gmo/: gmo_auth.py  gmo_data_fetcher.py  gmo_order.py  gmo_order_debug.py  gmo_websocket_client.py
modules/: calculate_limit_price.py  calculate_position.py  logging_config.py
src/: calc_technical_indicators.py  data_procces_and_predict.py  excute_trading.py  excute_trading_bybit.py  excute_trading_gmo.py  record_predictions.py
strategies/: strategy_bybit_v001.py  strategy_gmo_v001.py  strategy_v001.py  strategy_v002.py  strategy_v003.py
