[tool.poetry]
name = "-environment-pr"
version = "0.1.0"
description = ""
authors = ["Machahiko"]
readme = "README.md"
packages = [{include = "environment_pr"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^1.26.4"
catboost = "^1.2.7"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.9"
schedule = "^1.2.2"
seaborn = "^0.13.2"
ta-lib = "^0.4.32"
rich = "^13.9.2"
ccxt = "^4.4.13"
matplot = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
